fix z-index on headermenu

--- a/Assessments.Frontend.Web/wwwroot/css/bnw.css
+++ b/Assessments.Frontend.Web/wwwroot/css/bnw.css
@@ -1,7 +1,7 @@
 /* BUTTONs FOR THEME SELECTING */
 
 #headermenu {
-    z-index: 3;
+    z-index: 13;
 }
 
 .themeselector {
@@ -14,7 +14,7 @@
 }
 
 .themeselectordropdown {
-    z-index: 3;
+    z-index: 13;
     display:none;
     position:absolute;
     top:50px;
